--- a/contact.html
+++ b/contact.html
@@ -187,21 +187,21 @@
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-home"></i></span>
                         <div class="media-body">
-                            <h3>Buttonwood, California.</h3>
-                            <p>Rosemead, CA 91770</p>
+                            <h3>H.No-03, Palwali Sector 88 </h3>
+                            <p>Near Amrita Hospital, Greater Faridabad </p>
                         </div>
                     </div>
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-tablet"></i></span>
                         <div class="media-body">
-                            <h3>+1 253 565 2365</h3>
-                            <p>Mon to Fri 9am to 6pm</p>
+                            <h3>+91 8800785132</h3>
+                            <p>Mon to Sat 9am to 6pm</p>
                         </div>
                     </div>
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-email"></i></span>
                         <div class="media-body">
-                            <h3>support@colorlib.com</h3>
+                            <h3>dilipbharti1970@gmail.com</h3>
                             <p>Send us your query anytime!</p>
                         </div>
                     </div>
