--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/loder.png" alt="">
+                    <img src="assets/img/logo/logo_vidyatm.jpeg" alt="">
                 </div>
             </div>
         </div>
@@ -48,7 +48,7 @@
                         <!-- Logo -->
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <a href="index.html"><img src="assets/img/logo/logo_vidyatm.jpeg" alt="" height="90px" width="100px"></a>
                             </div>
                         </div>
                         <div class="col-xl-10 col-lg-10">
@@ -442,7 +442,7 @@
                             <div class="single-footer-caption mb-30">
                                 <!-- logo -->
                                 <div class="footer-logo mb-25">
-                                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                    <a href="index.html"><img src="assets/img/logo/logo_vidyatm.jpeg" alt="" height="90px" width="100px"></a>
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-pera">
