--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/loder.png" alt="">
+                    <img src="assets/img/logo/logo_vidyatm.jpeg" alt="">
                 </div>
             </div>
         </div>
@@ -169,9 +169,9 @@
                                 <a href="#"><img src="assets/img/gallery/featured1.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>User Experience</p>
-                                <h3><a href="#">Fundamental of UX for Application design</a></h3>
-                                <p>The automated process all your website tasks. Discover tools and techniques to engage effectively with vulnerable children and young people.
+                                <!-- <p>User Experience</p> -->
+                                <h3><a href="#">Economics</a></h3>
+                                <p>Explore key economic concepts, trends, and principles that shape global markets and influence financial decision-making in today's world.
 
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
@@ -202,9 +202,9 @@
                                 <a href="#"><img src="assets/img/gallery/featured2.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>User Experience</p>
-                                <h3><a href="#">Fundamental of UX for Application design</a></h3>
-                                <p>The automated process all your website tasks. Discover tools and techniques to engage effectively with vulnerable children and young people.
+                                <!-- <p>User Experience</p> -->
+                                <h3><a href="#">Accountancy</a></h3>
+                                <p>Master the fundamentals of accountancy, from financial statements to auditing, and gain insights into managing business finances effectively.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -233,9 +233,9 @@
                                 <a href="#"><img src="assets/img/gallery/featured3.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>User Experience</p>
-                                <h3><a href="#">Fundamental of UX for Application design</a></h3>
-                                <p>The automated process all your website tasks. Discover tools and techniques to engage effectively with vulnerable children and young people.
+                                <!-- <p>User Experience</p> -->
+                                <h3><a href="#">Business Studies</a></h3>
+                                <p>Learn essential business strategies, management principles, and organizational practices to drive success in today’s dynamic corporate world.
 
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
@@ -263,12 +263,12 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img overlay1">
-                                <a href="#"><img src="assets/img/gallery/featured2.png" alt=""></a>
+                                <a href="#"><img src="assets/img/gallery/featured4.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>User Experience</p>
-                                <h3><a href="#">Fundamental of UX for Application design</a></h3>
-                                <p>The automated process all your website tasks. Discover tools and techniques to engage effectively with vulnerable children and young people.
+                                <!-- <p>User Experience</p> -->
+                                <h3><a href="#">English</a></h3>
+                                <p>Enhance your language skills, explore literature, and master communication techniques to express ideas clearly and effectively.
 
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
@@ -370,7 +370,7 @@
                                 <img src="assets/img/gallery/topic1.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">Arts</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -382,7 +382,7 @@
                                 <img src="assets/img/gallery/topic2.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">History</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -394,7 +394,7 @@
                                 <img src="assets/img/gallery/topic3.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">Political Science</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -406,7 +406,7 @@
                                 <img src="assets/img/gallery/topic4.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">Geography</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -418,7 +418,7 @@
                                 <img src="assets/img/gallery/topic5.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">Hindi</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -430,7 +430,7 @@
                                 <img src="assets/img/gallery/topic6.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">Civics</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -442,7 +442,7 @@
                                 <img src="assets/img/gallery/topic7.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">Psychology</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -454,7 +454,7 @@
                                 <img src="assets/img/gallery/topic8.png" alt="">
                                 <div class="topic-content-box">
                                     <div class="topic-content">
-                                        <h3><a href="#">Programing</a></h3>
+                                        <h3><a href="#">Financial Reporting</a></h3>
                                     </div>
                                 </div>
                             </div>
@@ -616,7 +616,7 @@
                             <div class="single-footer-caption mb-30">
                                 <!-- logo -->
                                 <div class="footer-logo mb-25">
-                                    <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                    <a href="index.html"><img src="assets/img/logo/logo_vidyatm.jpeg" alt="" height="90px" width="100px"></a>
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-pera">
