--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/loder.png" alt="">
+                    <img src="assets/img/logo/logo_vidyatm.jpeg" alt="">
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
             <div class="login-form">
                 <!-- logo-login -->
                 <div class="logo-login">
-                    <a href="index.html"><img src="assets/img/logo/loder.png" alt=""></a>
+                    <a href="index.html"><img src="assets/img/logo/logo_vidyatm.jpeg" alt=""></a>
                 </div>
                 <h2>Login Here</h2>
                 <div class="form-input">
