--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/loder.png" alt="">
+                    <img src="assets/img/logo/logo_vidyatm.jpeg" alt="">
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
         <div class="login-form">
             <!-- logo-login -->
             <div class="logo-login">
-                <a href="index.html"><img src="assets/img/logo/loder.png" alt=""></a>
+                <a href="index.html"><img src="assets/img/logo/logo_vidyatm.jpeg" alt=""></a>
             </div>
             <h2>Registration Here</h2>
 
