--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                                         <nav>
                                             <ul id="navigation">                                                                                          
                                                 <li class="active" ><a href="index.html">Home</a></li>
-                                                <li><a href="about.html">About</a></li>
+                                                <li><a href="about.html">About Us</a></li>
+                                                <li><a href="services.html">Services</a></li>
                                                 <li><a href="courses.html">Courses</a></li>
                                                 <!--
                                                 <li><a href="#">Blog</a>
@@ -73,8 +74,10 @@
                                                 -->
                                                 <li><a href="contact.html">Contact</a></li>
                                                 <!-- Button -->
+                                                 <!--
                                                 <li class="button-header margin-left "><a href="#" class="btn">Join</a></li>
                                                 <li class="button-header"><a href="login.html" class="btn btn3">Log in</a></li>
+                                                -->
                                             </ul>
                                         </nav>
                                     </div>
@@ -157,7 +160,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>Our featured courses</h2>
+                            <h2>Our Featured Courses</h2>
                         </div>
                     </div>
                 </div>
@@ -186,7 +189,7 @@
                                         <p><span>(4.5)</span> based on 120</p>
                                     </div>
                                     <div class="price">
-                                        <span>$135</span>
+                                        <span>₹ 999</span>
                                     </div>
                                 </div>
                                 <a href="#" class="border-btn border-btn2">Find out more</a>
@@ -218,7 +221,7 @@
                                         <p><span>(4.5)</span> based on 120</p>
                                     </div>
                                     <div class="price">
-                                        <span>$135</span>
+                                        <span>₹ 999</span>
                                     </div>
                                 </div>
                                 <a href="#" class="border-btn border-btn2">Find out more</a>
@@ -250,7 +253,7 @@
                                         <p><span>(4.5)</span> based on 120</p>
                                     </div>
                                     <div class="price">
-                                        <span>$135</span>
+                                        <span>₹ 999</span>
                                     </div>
                                 </div>
                                 <a href="#" class="border-btn border-btn2">Find out more</a>
@@ -283,7 +286,7 @@
                                         <p><span>(4.5)</span> based on 120</p>
                                     </div>
                                     <div class="price">
-                                        <span>$135</span>
+                                        <span>₹ 999</span>
                                     </div>
                                 </div>
                                 <a href="#" class="border-btn border-btn2">Find out more</a>
@@ -359,7 +362,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>Explore top subjects</h2>
+                            <h2>Explore Top Subjects</h2>
                         </div>
                     </div>
                 </div>
@@ -525,7 +528,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>Community experts</h2>
+                            <h2>Our Expert instructors</h2>
                         </div>
                     </div>
                 </div>
@@ -545,7 +548,7 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Mr. Logo</a></h5>
-                            <p>VIDYATM Official Logo</p>
+                            <p>Phd in Social Science and Political.</p>
                         </div>
                     </div>
                     <div class="single-cat text-center">
@@ -554,7 +557,7 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Mr. Shakil</a></h5>
-                            <p>The automated process all your website tasks.</p>
+                            <p>Phd. & MPhil in Biology & Science.</p>
                         </div>
                     </div>
                     <div class="single-cat text-center">
@@ -563,7 +566,7 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Mr. Arafat</a></h5>
-                            <p>The automated process all your website tasks.</p>
+                            <p>Dr. In Ayurveda and Science</p>
                         </div>
                     </div>
                     <div class="single-cat text-center">
@@ -572,7 +575,7 @@
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Mr. saiful</a></h5>
-                            <p>The automated process all your website tasks.</p>
+                            <p>Btech & Mtech. in Data Science & Machine Learning</p>
                         </div>
                     </div>
                 </div>
@@ -620,7 +623,7 @@
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-pera">
-                                        <p>The automated process starts as soon as your clothes go into the machine.</p>
+                                        <p>The Android Application will start as soon.</p>
                                     </div>
                                 </div>
                                 <!-- social -->
@@ -635,13 +638,13 @@
                     <div class="col-xl-2 col-lg-3 col-md-4 col-sm-5">
                         <div class="single-footer-caption mb-50">
                             <div class="footer-tittle">
-                                <h4>Our solutions</h4>
+                                <h4>Our Services</h4>
                                 <ul>
-                                    <li><a href="#">Design & creatives</a></li>
-                                    <li><a href="#">Telecommunication</a></li>
-                                    <li><a href="#">Restaurant</a></li>
-                                    <li><a href="#">Programing</a></li>
-                                    <li><a href="#">Architecture</a></li>
+                                    <li><a href="#">NEET Exams</a></li>
+                                    <li><a href="#">JEE</a></li>
+                                    <li><a href="#">JEE Mains</a></li>
+                                    <li><a href="#">Medical Exams</a></li>
+                                    <li><a href="#">Govt Exams</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -651,11 +654,11 @@
                             <div class="footer-tittle">
                                 <h4>Support</h4>
                                 <ul>
-                                    <li><a href="#">Design & creatives</a></li>
-                                    <li><a href="#">Telecommunication</a></li>
-                                    <li><a href="#">Restaurant</a></li>
-                                    <li><a href="#">Programing</a></li>
-                                    <li><a href="#">Architecture</a></li>
+                                    <li><a href="#">NEET Exam</a></li>
+                                    <li><a href="#">JEE</a></li>
+                                    <li><a href="#">JEE Mains</a></li>
+                                    <li><a href="#">Medical Exams</a></li>
+                                    <li><a href="#">Govt Exams</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -665,11 +668,11 @@
                             <div class="footer-tittle">
                                 <h4>Company</h4>
                                 <ul>
-                                    <li><a href="#">Design & creatives</a></li>
-                                    <li><a href="#">Telecommunication</a></li>
-                                    <li><a href="#">Restaurant</a></li>
-                                    <li><a href="#">Programing</a></li>
-                                    <li><a href="#">Architecture</a></li>
+                                    <li><a href="#">NEET Exam</a></li>
+                                    <li><a href="#">JEE</a></li>
+                                    <li><a href="#">JEE Mains</a></li>
+                                    <li><a href="#">Medical Exams</a></li>
+                                    <li><a href="#">Govt Exams</a></li>
                                 </ul>
                             </div>
                         </div>
