--- a/services.html
+++ b/services.html
@@ -55,8 +55,10 @@
                                     <nav>
                                         <ul id="navigation">                                                                                          
                                             <li class="active" ><a href="index.html">Home</a></li>
+                                            <li><a href="about.html">About Us</a></li>
+                                            <li><a href="services.html">Services</a></li>
                                             <li><a href="courses.html">Courses</a></li>
-                                            <li><a href="about.html">About</a></li>
+                                            <!--
                                             <li><a href="#">Blog</a>
                                                 <ul class="submenu">
                                                     <li><a href="blog.html">Blog</a></li>
@@ -64,10 +66,13 @@
                                                     <li><a href="elements.html">Element</a></li>
                                                 </ul>
                                             </li>
+                                            -->
                                             <li><a href="contact.html">Contact</a></li>
                                             <!-- Button -->
+                                             <!--
                                             <li class="button-header margin-left "><a href="#" class="btn">Join</a></li>
                                             <li class="button-header"><a href="login.html" class="btn btn3">Log in</a></li>
+                                            -->
                                         </ul>
                                     </nav>
                                 </div>
@@ -450,11 +455,11 @@
                                <div class="footer-tittle">
                                    <h4>Our solutions</h4>
                                    <ul>
-                                       <li><a href="#">Design & creatives</a></li>
-                                       <li><a href="#">Telecommunication</a></li>
-                                       <li><a href="#">Restaurant</a></li>
-                                       <li><a href="#">Programing</a></li>
-                                       <li><a href="#">Architecture</a></li>
+                                    <li><a href="#">NEET Exam</a></li>
+                                    <li><a href="#">JEE</a></li>
+                                    <li><a href="#">JEE Mains</a></li>
+                                    <li><a href="#">Medical Exams</a></li>
+                                    <li><a href="#">Govt Exams</a></li>
                                    </ul>
                                </div>
                            </div>
@@ -464,11 +469,11 @@
                                <div class="footer-tittle">
                                    <h4>Support</h4>
                                    <ul>
-                                       <li><a href="#">Design & creatives</a></li>
-                                       <li><a href="#">Telecommunication</a></li>
-                                       <li><a href="#">Restaurant</a></li>
-                                       <li><a href="#">Programing</a></li>
-                                       <li><a href="#">Architecture</a></li>
+                                    <li><a href="#">NEET Exam</a></li>
+                                    <li><a href="#">JEE</a></li>
+                                    <li><a href="#">JEE Mains</a></li>
+                                    <li><a href="#">Medical Exams</a></li>
+                                    <li><a href="#">Govt Exams</a></li>
                                    </ul>
                                </div>
                            </div>
@@ -478,11 +483,11 @@
                                <div class="footer-tittle">
                                    <h4>Company</h4>
                                    <ul>
-                                       <li><a href="#">Design & creatives</a></li>
-                                       <li><a href="#">Telecommunication</a></li>
-                                       <li><a href="#">Restaurant</a></li>
-                                       <li><a href="#">Programing</a></li>
-                                       <li><a href="#">Architecture</a></li>
+                                    <li><a href="#">NEET Exam</a></li>
+                                    <li><a href="#">JEE</a></li>
+                                    <li><a href="#">JEE Mains</a></li>
+                                    <li><a href="#">Medical Exams</a></li>
+                                    <li><a href="#">Govt Exams</a></li>
                                    </ul>
                                </div>
                            </div>
