added the social media links

--- a/courses.html
+++ b/courses.html
@@ -462,7 +462,7 @@
                             </div>
                             <div class="features-caption">
                                 <h3>60+ UX courses</h3>
-                                <p>The automated process all your website tasks.</p>
+                                <p>which can prepare for each and every exams effectively</p>
                             </div>
                         </div>
                     </div>
@@ -512,9 +512,9 @@
                                    </div>
                                    <!-- social -->
                                    <div class="footer-social">
-                                       <a href="#"><i class="fab fa-twitter"></i></a>
-                                       <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                       <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    <a href="https://www.instagram.com/dilipbharti6020?igsh=OXU0Z2E3czdhc3h6"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/dilipkumar.bharti.7967?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.youtube.com/yourchannel"><i class="fab fa-youtube"></i></a>
                                    </div>
                                </div>
                            </div>
@@ -571,9 +571,9 @@
                        <div class="row d-flex align-items-center">
                            <div class="col-xl-12 ">
                                <div class="footer-copy-right text-center">
-                                   <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                                <p>
+                                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">VIDYATM</a>
+                                </p>
                                   </div>
                               </div>
                           </div>
