--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/loder.png" alt="">
+                    <img src="assets/img/logo/logo_vidyatm.jpeg" alt="">
                 </div>
             </div>
         </div>
@@ -45,7 +45,7 @@
                         <!-- Logo -->
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
+                                <a href="index.html"><img src="assets/img/logo/logo_vidyatm.jpeg" alt="" height="90px" width="100px"></a>
                             </div>
                         </div>
                         <div class="col-xl-10 col-lg-10">
@@ -434,7 +434,7 @@
                                <div class="single-footer-caption mb-30">
                                    <!-- logo -->
                                    <div class="footer-logo mb-25">
-                                       <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                       <a href="index.html"><img src="assets/img/logo/logo_vidyatm.jpeg" alt="" height="90px" width="100px"></a>
                                    </div>
                                    <div class="footer-tittle">
                                        <div class="footer-pera">
@@ -443,9 +443,9 @@
                                    </div>
                                    <!-- social -->
                                    <div class="footer-social">
-                                       <a href="#"><i class="fab fa-twitter"></i></a>
-                                       <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                       <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    <a href="https://www.instagram.com/dilipbharti6020?igsh=OXU0Z2E3czdhc3h6"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/dilipkumar.bharti.7967?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.youtube.com/yourchannel"><i class="fab fa-youtube"></i></a>
                                    </div>
                                </div>
                            </div>
@@ -502,9 +502,9 @@
                        <div class="row d-flex align-items-center">
                            <div class="col-xl-12 ">
                                <div class="footer-copy-right text-center">
-                                   <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                                      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                                <p>
+                                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">VIDYATM</a>
+                                 </p>
                                   </div>
                               </div>
                           </div>
