--- a/index.html
+++ b/index.html
@@ -623,14 +623,14 @@
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-pera">
-                                        <p>The Android Application will start as soon.</p>
+                                        <p>The Android Application will start soon.</p>
                                     </div>
                                 </div>
                                 <!-- social -->
                                 <div class="footer-social">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="https://bit.ly/sai4ull"><i class="fab fa-facebook-f"></i></a>
-                                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    <a href="https://www.instagram.com/dilipbharti6020?igsh=OXU0Z2E3czdhc3h6"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/dilipkumar.bharti.7967?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.youtube.com/yourchannel"><i class="fab fa-youtube"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -687,9 +687,9 @@
                     <div class="row d-flex align-items-center">
                         <div class="col-xl-12 ">
                             <div class="footer-copy-right text-center">
-                                <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by <a href="" target="_blank">VIDYATM</a>
-                                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                                <p>
+                                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">VIDYATM</a>
+                                </p>
                               </div>
                           </div>
                       </div>
