--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <style>
+        *{
+            margin: 0%;
+            padding: 0%;
+        }
 
+</style>
+    
     <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
@@ -25,11 +32,12 @@
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
     
+    <link rel="stylesheet" href="color.css">
 </head>
 
 <body>
     <!-- ? Preloader Start -->
-    <div id="preloader-active">
+    <div  id="preloader-active">
         <div class="preloader d-flex align-items-center justify-content-center">
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
@@ -40,15 +48,15 @@
         </div>
     </div>
     <!-- Preloader Start -->
-    <header>
+    <header >
         <!-- Header Start -->
-        <div class="header-area header-transparent">
-            <div class="main-header ">
-                <div class="header-bottom  header-sticky">
-                    <div class="container-fluid">
-                        <div class="row align-items-center">
+        <div  class="header-area header-transparent">
+            <div style="width: 1500px; margin: 0%; padding: 0%;" class="main-header ">
+                <div  class="header-bottom  header-sticky">
+                    <div  class="container-fluid">
+                        <div  class="row align-items-center">
                             <!-- Logo -->
-                            <div class="col-xl-2 col-lg-2">
+                            <div  class="col-xl-2 col-lg-2">
                                 <div class="logo">
                                     <a href="index.html"><img src="assets/img/logo/logo_vidyatm.jpeg" alt="" style="width: 100px;"></a>
                                 </div>
@@ -56,7 +64,7 @@
                             <div class="col-xl-10 col-lg-10">
                                 <div class="menu-wrapper d-flex align-items-center justify-content-end">
                                     <!-- Main-menu -->
-                                    <div class="main-menu d-none d-lg-block">
+                                    <div  class="main-menu d-none d-lg-block">
                                         <nav>
                                             <ul id="navigation">                                                                                          
                                                 <li class="active" ><a href="index.html">Home</a></li>
@@ -96,8 +104,8 @@
     </header>
     <main>
         <!--? slider Area Start-->
-        <section class="slider-area ">
-            <div class="slider-active">
+        <section  class="slider-area ">
+            <div    class="slider-active">
                 <!-- Single Slider -->
                 <div class="single-slider slider-height d-flex align-items-center">
                     <div class="container">
@@ -609,7 +617,7 @@
         <!-- About Area End -->
     </main>
     <footer>
-     <div class="footer-wrappper footer-bg">
+     <div style="background-color: rgb(194, 249, 76);" class="footer-wrappper footer-bg">
         <!-- Footer Start-->
         <div class="footer-area footer-padding">
             <div class="container">
@@ -619,7 +627,7 @@
                             <div class="single-footer-caption mb-30">
                                 <!-- logo -->
                                 <div class="footer-logo mb-25">
-                                    <a href="index.html"><img src="assets/img/logo/logo_vidyatm.jpeg" alt="" height="90px" width="100px"></a>
+                                    <a href="index.html"><img src="hindilogo.png" alt="" height="90px" width="100px"></a>
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-pera">
@@ -640,11 +648,11 @@
                             <div class="footer-tittle">
                                 <h4>Our Services</h4>
                                 <ul>
-                                    <li><a href="#">NEET Exams</a></li>
-                                    <li><a href="#">JEE</a></li>
-                                    <li><a href="#">JEE Mains</a></li>
-                                    <li><a href="#">Medical Exams</a></li>
-                                    <li><a href="#">Govt Exams</a></li>
+                                    <li><a href="courses.html">NEET Exams</a></li>
+                                    <li><a href="courses.html">JEE</a></li>
+                                    <li><a href="courses.html">JEE Mains</a></li>
+                                    <li><a href="courses.html">Medical Exams</a></li>
+                                    <li><a href="courses.html">Govt Exams</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -654,11 +662,11 @@
                             <div class="footer-tittle">
                                 <h4>Support</h4>
                                 <ul>
-                                    <li><a href="#">NEET Exam</a></li>
-                                    <li><a href="#">JEE</a></li>
-                                    <li><a href="#">JEE Mains</a></li>
-                                    <li><a href="#">Medical Exams</a></li>
-                                    <li><a href="#">Govt Exams</a></li>
+                                    <li><a href="courses.html">NEET Exam</a></li>
+                                    <li><a href="courses.html">JEE</a></li>
+                                    <li><a href="courses.html">JEE Mains</a></li>
+                                    <li><a href="courses.html">Medical Exams</a></li>
+                                    <li><a href="courses.html">Govt Exams</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -668,11 +676,11 @@
                             <div class="footer-tittle">
                                 <h4>Company</h4>
                                 <ul>
-                                    <li><a href="#">NEET Exam</a></li>
-                                    <li><a href="#">JEE</a></li>
-                                    <li><a href="#">JEE Mains</a></li>
-                                    <li><a href="#">Medical Exams</a></li>
-                                    <li><a href="#">Govt Exams</a></li>
+                                    <li><a href="courses.html">NEET Exam</a></li>
+                                    <li><a href="courses.html">JEE</a></li>
+                                    <li><a href="courses.html">JEE Mains</a></li>
+                                    <li><a href="courses.html">Medical Exams</a></li>
+                                    <li><a href="courses.html">Govt Exams</a></li>
                                 </ul>
                             </div>
                         </div>
