--- a/about.html
+++ b/about.html
@@ -24,7 +24,8 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
-</head>
+
+</head><link rel="stylesheet" href="color.css">
 
 <body>
     <!-- ? Preloader Start -->
@@ -468,11 +469,11 @@
                             <div class="footer-tittle">
                                 <h4>Our solutions</h4>
                                 <ul>
-                                    <li><a href="#">NEET Exam</a></li>
-                                    <li><a href="#">JEE</a></li>
-                                    <li><a href="#">JEE Mains</a></li>
-                                    <li><a href="#">Medical Exams</a></li>
-                                    <li><a href="#">Govt Exams</a></li>
+                                    <li><a href="courses.html">NEET Exam</a></li>
+                                    <li><a href="courses.html">JEE</a></li>
+                                    <li><a href="courses.html">JEE Mains</a></li>
+                                    <li><a href="courses.html">Medical Exams</a></li>
+                                    <li><a href="courses.html">Govt Exams</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -482,11 +483,11 @@
                             <div class="footer-tittle">
                                 <h4>Support</h4>
                                 <ul>
-                                    <li><a href="#">NEET Exam</a></li>
-                                    <li><a href="#">JEE</a></li>
-                                    <li><a href="#">JEE Mains</a></li>
-                                    <li><a href="#">Medical Exams</a></li>
-                                    <li><a href="#">Govt Exams</a></li>
+                                    <li><a href="courses.html">NEET Exam</a></li>
+                                    <li><a href="courses.html">JEE</a></li>
+                                    <li><a href="courses.html">JEE Mains</a></li>
+                                    <li><a href="courses.html">Medical Exams</a></li>
+                                    <li><a href="courses.html">Govt Exams</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -496,11 +497,11 @@
                             <div class="footer-tittle">
                                 <h4>Company</h4>
                                 <ul>
-                                    <li><a href="#">NEET Exam</a></li>
-                                    <li><a href="#">JEE</a></li>
-                                    <li><a href="#">JEE Mains</a></li>
-                                    <li><a href="#">Medical Exams</a></li>
-                                    <li><a href="#">Govt Exams</a></li>
+                                    <li><a href="courses.html">NEET Exam</a></li>
+                                    <li><a href="courses.html">JEE</a></li>
+                                    <li><a href="courses.html">JEE Mains</a></li>
+                                    <li><a href="courses.html">Medical Exams</a></li>
+                                    <li><a href="courses.html">Govt Exams</a></li>
                                 </ul>
                             </div>
                         </div>
