--- a/blog_details.html
+++ b/blog_details.html
@@ -564,11 +564,11 @@
                         <div class="footer-tittle">
                            <h4>Our solutions</h4>
                            <ul>
-                              <li><a href="#">NEET Exam</a></li>
-                              <li><a href="#">JEE</a></li>
-                              <li><a href="#">JEE Mains</a></li>
-                              <li><a href="#">Medical Exams</a></li>
-                              <li><a href="#">Govt Exams</a></li>
+                              <li><a href="courses.html">NEET Exam</a></li>
+                              <li><a href="courses.html">JEE</a></li>
+                              <li><a href="courses.html">JEE Mains</a></li>
+                              <li><a href="courses.html">Medical Exams</a></li>
+                              <li><a href="courses.html">Govt Exams</a></li>
                            </ul>
                         </div>
                      </div>
@@ -578,11 +578,11 @@
                         <div class="footer-tittle">
                            <h4>Support</h4>
                            <ul>
-                              <li><a href="#">NEET Exam</a></li>
-                              <li><a href="#">JEE</a></li>
-                              <li><a href="#">JEE Mains</a></li>
-                              <li><a href="#">Medical Exams</a></li>
-                              <li><a href="#">Govt Exams</a></li>
+                              <li><a href="courses.html">NEET Exam</a></li>
+                              <li><a href="courses.html">JEE</a></li>
+                              <li><a href="courses.html">JEE Mains</a></li>
+                              <li><a href="courses.html">Medical Exams</a></li>
+                              <li><a href="courses.html">Govt Exams</a></li>
                            </ul>
                         </div>
                      </div>
@@ -592,11 +592,11 @@
                         <div class="footer-tittle">
                            <h4>Company</h4>
                            <ul>
-                              <li><a href="#">NEET Exam</a></li>
-                              <li><a href="#">JEE</a></li>
-                              <li><a href="#">JEE Mains</a></li>
-                              <li><a href="#">Medical Exams</a></li>
-                              <li><a href="#">Govt Exams</a></li>
+                              <li><a href="courses.html">NEET Exam</a></li>
+                              <li><a href="courses.html">JEE</a></li>
+                              <li><a href="courses.html">JEE Mains</a></li>
+                              <li><a href="courses.html">Medical Exams</a></li>
+                              <li><a href="courses.html">Govt Exams</a></li>
                            </ul>
                         </div>
                      </div>
