--- a/elements.html
+++ b/elements.html
@@ -781,11 +781,11 @@
 														<div class="footer-tittle">
 															<h4>Our solutions</h4>
 															<ul>
-																<li><a href="#">NEET Exam</a></li>
-																<li><a href="#">JEE</a></li>
-																<li><a href="#">JEE Mains</a></li>
-																<li><a href="#">Medical Exams</a></li>
-																<li><a href="#">Govt Exams</a></li>
+																<li><a href="courses.html">NEET Exam</a></li>
+																<li><a href="courses.html">JEE</a></li>
+																<li><a href="courses.html">JEE Mains</a></li>
+																<li><a href="courses.html">Medical Exams</a></li>
+																<li><a href="courses.html">Govt Exams</a></li>
 															</ul>
 														</div>
 													</div>
@@ -795,11 +795,11 @@
 														<div class="footer-tittle">
 															<h4>Support</h4>
 															<ul>
-																<li><a href="#">NEET Exam</a></li>
-																<li><a href="#">JEE</a></li>
-																<li><a href="#">JEE Mains</a></li>
-																<li><a href="#">Medical Exams</a></li>
-																<li><a href="#">Govt Exams</a></li>
+																<li><a href="courses.html">NEET Exam</a></li>
+																<li><a href="courses.html">JEE</a></li>
+																<li><a href="courses.html">JEE Mains</a></li>
+																<li><a href="courses.html">Medical Exams</a></li>
+																<li><a href="courses.html">Govt Exams</a></li>
 															</ul>
 														</div>
 													</div>
@@ -809,11 +809,11 @@
 														<div class="footer-tittle">
 															<h4>Company</h4>
 															<ul>
-																<li><a href="#">NEET Exam</a></li>
-																<li><a href="#">JEE</a></li>
-																<li><a href="#">JEE Mains</a></li>
-																<li><a href="#">Medical Exams</a></li>
-																<li><a href="#">Govt Exams</a></li>
+																<li><a href="courses.html">NEET Exam</a></li>
+																<li><a href="courses.html">JEE</a></li>
+																<li><a href="courses.html">JEE Mains</a></li>
+																<li><a href="courses.html">Medical Exams</a></li>
+																<li><a href="courses.html">Govt Exams</a></li>
 															</ul>
 														</div>
 													</div>
