--- a/services.html
+++ b/services.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="color.css">
 </head>
 <body>
     <!--? Preloader Start -->
@@ -455,11 +456,11 @@
                                <div class="footer-tittle">
                                    <h4>Our solutions</h4>
                                    <ul>
-                                    <li><a href="#">NEET Exam</a></li>
-                                    <li><a href="#">JEE</a></li>
-                                    <li><a href="#">JEE Mains</a></li>
-                                    <li><a href="#">Medical Exams</a></li>
-                                    <li><a href="#">Govt Exams</a></li>
+                                    <li><a href="courses.html">NEET Exam</a></li>
+                                    <li><a href="courses.html">JEE</a></li>
+                                    <li><a href="courses.html">JEE Mains</a></li>
+                                    <li><a href="courses.html">Medical Exams</a></li>
+                                    <li><a href="courses.html">Govt Exams</a></li>
                                    </ul>
                                </div>
                            </div>
@@ -469,11 +470,11 @@
                                <div class="footer-tittle">
                                    <h4>Support</h4>
                                    <ul>
-                                    <li><a href="#">NEET Exam</a></li>
-                                    <li><a href="#">JEE</a></li>
-                                    <li><a href="#">JEE Mains</a></li>
-                                    <li><a href="#">Medical Exams</a></li>
-                                    <li><a href="#">Govt Exams</a></li>
+                                    <li><a href="courses.html">NEET Exam</a></li>
+                                    <li><a href="courses.html">JEE</a></li>
+                                    <li><a href="courses.html">JEE Mains</a></li>
+                                    <li><a href="courses.html">Medical Exams</a></li>
+                                    <li><a href="courses.html">Govt Exams</a></li>
                                    </ul>
                                </div>
                            </div>
@@ -483,11 +484,11 @@
                                <div class="footer-tittle">
                                    <h4>Company</h4>
                                    <ul>
-                                    <li><a href="#">NEET Exam</a></li>
-                                    <li><a href="#">JEE</a></li>
-                                    <li><a href="#">JEE Mains</a></li>
-                                    <li><a href="#">Medical Exams</a></li>
-                                    <li><a href="#">Govt Exams</a></li>
+                                    <li><a href="courses.html">NEET Exam</a></li>
+                                    <li><a href="courses.html">JEE</a></li>
+                                    <li><a href="courses.html">JEE Mains</a></li>
+                                    <li><a href="courses.html">Medical Exams</a></li>
+                                    <li><a href="courses.html">Govt Exams</a></li>
                                    </ul>
                                </div>
                            </div>
