Updated the theme of website

--- a/contact.html
+++ b/contact.html
@@ -282,7 +282,7 @@
                                </div>
                                <div class="footer-tittle">
                                    <div class="footer-pera">
-                                       <p>The automated process starts as soon as your clothes go into the machine.</p>
+                                       <p>The Android Application will start soon.</p>
                                    </div>
                                </div>
                                <!-- social -->
@@ -424,9 +424,9 @@
         // Send email using SMTP.js and Elastic Email
         Email.send({
             Host: "smtp.elasticemail.com",
-            Username: "your email id",  // Replace with your Elastic Email username
-            Password: "password",  // Replace with your Elastic Email password
-            To: 'your email id ',  // Replace with the recipient email address
+            Username: "govindtayal26@gmail.com",  // Replace with your Elastic Email username
+            Password: "E79457AD2BBE445CDCDB8C90AB3C5E613AA8",  // Replace with your Elastic Email password
+            To: 'radhikatayal80@gmail.com',  // Replace with the recipient email address
             From: email,  // User's email from the form
             Subject: subject,  // Subject from the form
             Body: `
