Contact Form Added

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 <div class="team-active">
                     <div class="single-cat text-center">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/team5.jpeg" alt="" style="width: 200px; height: 190px;">
+                            <img style="width: 150px; height: 150px; border-radius: 100px;" src="assets/img/gallery/team5.jpeg" alt="" style="width: 200px; height: 190px;">
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Mr. Goswami Dilip</a></h5>
@@ -564,7 +564,7 @@
                     </div>
                     <div class="single-cat text-center">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/team6.jpeg" alt="" style="width: 200px; height: 190px;">
+                            <img style="width: 150px; height: 150px; border-radius: 100px;" src="assets/img/gallery/team6.jpeg" alt="" style="width: 200px; height: 190px;">
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Mr. Logo</a></h5>
@@ -573,25 +573,25 @@
                     </div>
                     <div class="single-cat text-center">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/team3.png" alt="">
+                            <img style="width: 150px; height: 150px; border-radius: 100px;" src="photo1.jpeg" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">Mr. Shakil</a></h5>
-                            <p>Phd. & MPhil in Biology & Science.</p>
+                            <h5><a href="services.html">Mr. Rajneesh</a></h5>
+                            <p>IT Head</p>
                         </div>
                     </div>
                     <div class="single-cat text-center">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/team4.png" alt="">
+                            <img style="width: 150px; height: 150px; border-radius: 100px;" src="photo2.jpeg" alt="">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">Mr. Arafat</a></h5>
-                            <p>Dr. In Ayurveda and Science</p>
+                            <h5><a href="services.html">Dr. Pooja Bharti </a></h5>
+                            <p> Professor, Biology </p>
                         </div>
                     </div>
                     <div class="single-cat text-center">
                         <div class="cat-icon">
-                            <img src="assets/img/gallery/team3.png" alt="">
+                            <img style="width: 150px; height: 150px; border-radius: 100px;" src="assets/img/gallery/team3.png" alt="">
                         </div>
                         <div class="cat-cap">
                             <h5><a href="services.html">Mr. saiful</a></h5>
